# nietzsche-rag

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  dependencies.py  main.py  routes.py  schemas.py
app/routes/: __init__.py  books.py  rag.py
app/schemas/: __init__.py  request.py  response.py
app/services/: __init__.py  engine.py  rag_engine.py
app/setup/: config.py  setup.py  setup_config.py
app/setup/data/: beyond_good_and_evil.txt  gay_science.txt
app/utils/: __init__.py  chat_format.py  count_chunks.py  embed.py  format_chat.py  translate.py
data/: birth_of_tragedy.txt  thus_spoke_zarathustra.txt
qdrant_data/: meta.json
scripts/: config.py  embed_index.py  etl.py  main.py  save_pretrained_model.py
scripts/data/: birth_of_tragedy.txt  ecce_homo.txt  gay_science.txt  genealogy_of_morals.txt  thus_spoke_zarathustra.txt  twilight_of_idols.txt
